# QtCreator

./: README.md
HPC1/Algebra01/: CMakeLists.txt  main.cpp
HPC1/Algebra01/Debug/: Algebra01  Algebra01.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
HPC1/ModeloLinealR-/ModeloLinealR/: CMakeLists.txt  CMakeLists.txt.user.5ffa296  extraer.cpp  extraer.h  main.cpp
HPC1/ModeloLinealR-/ModeloLinealR/Debug/: CMakeCache.txt  Makefile  ModeloLinealR  ModeloLinealR.cbp  cmake_install.cmake
HPC1/ModeloLinealR-/ModeloLinealR/Extraccion/: extraer.cpp  extraer.h
HPC1/ModeloLinealR-/build-ModeloLinealR-Desktop-Debug/: CMakeCache.txt  Makefile  ModeloLinealR  ModeloLinealR.cbp  cmake_install.cmake
